--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     },
     "linux": {
       "target": [
-        "deb"
+        "AppImage",
+        "snap"
       ],
       "category": "Communication"
     }
@@ -39,6 +40,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "electron-context-menu": "^1.0.0"
+    "electron-context-menu": "^1.0.0",
+    "electron-log": "^4.1.1"
   }
 }
