--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   "author": "ExtraHash <extrahash@protonmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
     "prettier": "^2.0.5",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "electron": "6.1.11",
     "electron-context-menu": "^1.0.0",
     "electron-log": "^4.1.1"
   }
