add tel protocol

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple wrapper for jive",
   "main": "./dist/main.js",
   "scripts": {
-    "start": "yarn build; electron .",
+    "start": "electron .",
     "build": "node ./node_modules/typescript/bin/tsc; cp -r resources ./dist",
     "prettier": "node ./node_modules/prettier/bin-prettier.js '**/*.{ts,tsx,json,md}' --trailing-comma es5 --ignore-path .gitignore --single-quote --arrow-parens always --write",
     "lint": "./node_modules/tslint/bin/tslint src/**/*.ts{,x}",
